[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/net.png" type="Texture" id=1]
[ext_resource path="res://code/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menu/GameFinish.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Walls.tscn" type="PackedScene" id=7]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0898438, 0.0873871, 0.0873871, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameFinish" parent="." instance=ExtResource( 5 )]

[node name="VBoxContainer" parent="GameFinish/GameFinishPopup/MarginContainer" index="0"]
margin_right = 1740.0
margin_bottom = 1000.0

[node name="HUD" parent="GameFinish" instance=ExtResource( 6 )]

[node name="Net" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 960, 540 )

[node name="Player0" parent="." instance=ExtResource( 4 )]

[node name="Player1" parent="." instance=ExtResource( 4 )]
player_num = 1

[node name="Walls" parent="." instance=ExtResource( 7 )]

[node name="Ball" parent="." instance=ExtResource( 3 )]

[node name="ThrowTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 2.0
one_shot = true
[connection signal="hit_score" from="Ball" to="." method="_on_Ball_hit_score"]

[editable path="GameFinish"]
